# recursor

./: AGENTS.md  Cargo.toml  README.md  VIBECODE.md  architecture.md  phase.md  task.md
.github/workflows/: ci.yml
apps/desktop/: Cargo.toml
apps/desktop/src/: main.rs
crates/agent-cli/: Cargo.toml
crates/agent-cli/src/: main.rs
crates/agent-core/: Cargo.toml
crates/agent-core/src/: agent.rs  error.rs  event.rs  lib.rs  llm.rs  memory.rs  tool.rs  types.rs  verifier.rs
crates/agent-core/tests/: events_test.rs  types_test.rs
crates/agent-llm/: Cargo.toml
crates/agent-llm/src/: gemini.rs  lib.rs  openai.rs
crates/agent-runtime/: Cargo.toml
crates/agent-runtime/src/: agent_executor.rs  engine.rs  lib.rs  memory.rs  scheduler.rs
crates/agent-tools/: Cargo.toml
crates/agent-tools/src/: filesystem.rs  http.rs  lib.rs  registry.rs  search.rs  shell.rs
crates/agent-ui/: Cargo.toml
crates/agent-ui/src/: components.rs  lib.rs
crates/agent-verifier/: Cargo.toml
crates/agent-verifier/src/: code_verifier.rs  gates.rs  lib.rs  llm_verifier.rs  pipeline.rs  reflection.rs
