[package]
name = "agent-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "agentic"
path = "src/main.rs"

[dependencies]
agent-core = { path = "../agent-core" }
agent-llm = { path = "../agent-llm" }
agent-tools = { path = "../agent-tools" }
agent-verifier = { path = "../agent-verifier" }
agent-runtime = { path = "../agent-runtime" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
